<resources>
    <string name="app_name">Care Corner</string>
    <string name="login">Login</string>
    <string name="resources">Resources</string>
    <string name="register">New User?</string>
    <string name="forgot_username">Forgot Username?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="send_reset">Send Reset</string>
    <string name="avatar_picture">avatar_picture</string>
    <string name="send_username">Send Username</string>
    <string name="create">Create</string>
    <string name="email">Email</string>
    <string name="fake_call">Fake Call</string>
    <string name="mombot">Mombot</string>
    <string name="start_walk">Start Walk</string>
    <string name="journal">Journal</string>
    <string name="reporting_assistance">Reporting Assistance</string>
    <string name="fake_phone_call">Fake Phone Call</string>
    <string name="call">Call</string>
    <string name="recordings">Recordings</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="date">Date</string>
    <string name="incoming_call">Calling...</string>
    <string name="caller_id">Caller ID</string>
    <string name="send_message">Send Message</string>
    <string name="mobile">Mobile: Phone Number Placeholder</string>
    <string name="select_voice">Select Voice:</string>
    <string name="set">Set</string>
    <string name="waiting_time">Waiting Time:</string>
    <string name="add_call">Add call</string>
    <string name="message">Message</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="speaker">Speaker</string>
    <string name="keypad">Keypad</string>
    <string name="mute">Mute</string>
    <string name="my_journal">My Journal</string>
    <string name="return_home">Return Home</string>
    <string name="new_entry">New Entry</string>
    <string name="delete_entry">Delete Selected Entry</string>
    <string name="edit_entry">Edit Selected Entry</string>
    <string name="view_recycler">View Entries</string>
    <string name="element_text" />
    <string name="edit_my_entry">Edit Entry</string>
    <string name="journal_reader">Journal Reader</string>
    <string name="title">Title</string>
    <!-- <color name="lightblue">#94CCEo</color> -->



    <string-array name="spinnerWaitTime">
        <item>Now</item>
        <item>15 seconds</item>
        <item>1 minute</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
    </string-array>

    <string-array name="spinnerVoice">
        <item>malevoice.mp3</item>
        <item>femalevoice.mp3</item>
        <item>femalevoice2.mp3</item>
    </string-array>
</resources>