<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotUsernameActivity">

    <EditText
        android:id="@+id/emailEntryBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="text|textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/care_corner_logo"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/care_corner_logo"
        app:layout_constraintTop_toBottomOf="@+id/care_corner_logo" />

    <Button
        android:id="@+id/sendUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send_username"
        app:layout_constraintEnd_toEndOf="@+id/emailEntryBox"
        app:layout_constraintStart_toStartOf="@+id/emailEntryBox"
        app:layout_constraintTop_toBottomOf="@+id/emailEntryBox" />

    <ImageView
        android:id="@+id/care_corner_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/avatar_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

</androidx.constraintlayout.widget.ConstraintLayout>